@@ -6,6 +6,7 @@ import com.epam.automation.javaio_stage2.maintask.console.handlers.FilesHandler;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Scanner;
 
 public class Menu {
@@ -23,9 +24,9 @@ public class Menu {
             if (lineWithoutSpace.length() != 0) {
                 File pathToFolderOrFile = new File(lineWithoutSpace);
 
-                if (Files.isDirectory(Path.of(String.valueOf(pathToFolderOrFile)))) {
+                if (Files.isDirectory(Paths.get(String.valueOf(pathToFolderOrFile)))) {
                     new DirectoriesHandler().workWithDirectories(pathToFolderOrFile);
-                } else if (Files.isRegularFile(Path.of(String.valueOf(pathToFolderOrFile)))) {
+                } else if (Files.isRegularFile(Paths.get(String.valueOf(pathToFolderOrFile)))) {
                     new FilesHandler().workWithFiles(pathToFolderOrFile);
                 } else {
                     System.err.println("Path isn't exist please try again");
