@@ -3,6 +3,7 @@ package com.epam.automation.javaio_stage2.optionaltask;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -13,7 +14,7 @@ public class StartPoint4 {
     public static void main(String[] args) {
         List<String> lines = new ArrayList<>();
 
-        Path pathParentDirectory = Path.of("src\\main\\java\\com\\epam\\automation\\JavaIO\\OptionalTask\\File\\NewDirectoryPoint4");
+        Path pathParentDirectory = Paths.get("src\\main\\java\\com\\epam\\automation\\JavaIO\\OptionalTask\\File\\NewDirectoryPoint4");
 
         if (!Files.isDirectory(pathParentDirectory)) {
             try {
